# Githubapp

./: README.md
FETGitHub/: Dockerfile  docker-compose.yml
FETGitHub/cli-app/: README.md  pyproject.toml
FETGitHub/cli-app/cli_app/: csv_handler.py  git_hub_app.py  input.json  logger.py  main.py  validators.py
FETGitHub/tests/: __init__.py  test_csv_handler.py  test_git_hub_app.py  test_logger.py  test_main.py  test_validators.py
